--- a/public/css/public/public_general.scss
+++ b/public/css/public/public_general.scss
@@ -28,7 +28,7 @@ nav {
                 font-size: clamp(1.25rem, 3vw, 3rem);
                 direction: rtl;
                 letter-spacing: clamp(0.15rem, 0.25rem, 0.375rem);
-                text-indent: clamp(-0.15rem, -0.25rem, -0.375rem);
+                text-indent: -0.25rem;
             }
 
             .title {
